# confctl

./: .envrc  .neovim.lua  CHANGELOG.md  CLAUDE.md  Dockerfile.test  README.md  pyproject.toml
confctl/: __init__.py  channel.py  cli.py  conf.py  constants.py  ops_tracking.py  self_conf.py  template.py  ui.py  utils.py  worker.py
confctl/contrib/pyenv/: spec.py
confctl/utils/: py_module.py
confctl/wire/: events.py
src/confctl/: cli.py  ui.py
src/confctl/contrib/: asdf.py  bootstrap.py  homebrew.py  mise.py  pipx.py  uvx.py
src/confctl/contrib/pyenv/: __init__.py  actions.py  resolver.py  spec.py
src/confctl/mcp/: __init__.py  runner.py  server.py
src/confctl/ui/: __init__.py  _base.py  _ops.py  _rendering.py  _view.py  _widgets.py
src/confctl/utils/: template.py
src/confctl/wire/: channel.py  events.py
tests/: conftest.py  test_actions.py  test_channel.py  test_ctx.py  test_events.py  test_registry.py  test_spec.py  test_worker.py
tests/fixtures/configs/: .confbuild.py
tests/fixtures/configs/tools/chain/: .confbuild.py
tests/fixtures/configs/tools/file_renderer/: .confbuild.py  template.conf
tests/fixtures/configs/tools/greeter/: .confbuild.py
