[project]
name = "confctl"
version = "0.4.0"
description = "Simple configuration management"
authors = ["miphreal <miphreal@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/miphreal/confctl"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
dev-dependencies = [
    "ipdb>=0.13.13",
    "mypy>=1.11.2",
    "ruff>=0.6.4",
]
