[project]
name = "confctl"
version = "0.7.0"
description = "Simple configuration management"
authors = [
  {name = "Evgeny Lychkovsky", email = "miphreal@gmail.com"},
]
maintainers = [
  {name = "Evgeny Lychkovsky", email = "miphreal@gmail.com"},
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/miphreal/confctl"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.4",
    "rich>=13.8.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.2.0",
]

[project.scripts]
confctl = "confctl.cli:main"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "mypy>=1.11.2",
    "ruff>=0.6.4",
]
test = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
